# Vecs

./: CMakeLists.txt  LICENSE  README.md
src/benchmarks/: benchmark_comparative_view.cpp
src/vecs/: ECS.h  Entity.h  Pool.h  SparseSet.h  View.h
tests/: test_vecs_basic_operation.cpp  test_vecs_view.cpp
